Fixed swagger tags, not displaying correctly.
